[project]
name = "ci2025-lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
gpu = [
    "nx-cugraph-cu12>=25.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
